testdata/baselines/reference/submodule/conformance/typeTagWithGenericSignature.errors.txt
bug25618.js(2,16): error TS7006: Parameter 'param' implicitly has an 'any' type.


==== bug25618.js (1 errors) ====
    /** @type {<T>(param?: T) => T | undefined} */
    function typed(param) {
                   ~~~~~
!!! error TS7006: Parameter 'param' implicitly has an 'any' type.
        return param;
    }
    
    var n = typed(1);
    
    